--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "deep-diff": "^1.0.2",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
-    "release-it": "7.4.8",
-    "tslint": "^5.11.0"
+    "release-it": "7.4.8"
   },
   "devDependencies": {
     "@types/node": "^10.12.18",
@@ -65,6 +64,7 @@
     "husky": "^1.3.1",
     "nyc": "^13.1.0",
     "std-mocks": "^1.0.1",
+    "tslint": "^5.17.0",
     "typescript": "^3.2.2"
   },
   "bugs": {
